--- a/public/css/main.css
+++ b/public/css/main.css
@@ -43,6 +43,80 @@ a:focus {
 }
 #header {
   margin: 10px 0;
+  color: #111;
+  /*
+  a:not(.samfundet-icon) {
+    display: block;
+    color: @theme-primary;
+    font-size: 18px;
+    font-weight: 500;
+    text-transform: uppercase;
+    text-align: center;
+    padding: 20px 30px;
+    text-decoration: none;
+    .transition-all();
+    &:hover {
+      text-decoration: none;
+      color: @theme-danger;
+    }
+    &:focus {
+      text-decoration: none;
+      color: @theme-danger;
+    }
+    &:active {
+      text-decoration: none;
+      color: @theme-danger;
+    }
+  }*/
+}
+#header .col-md-5 {
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+  cursor: pointer;
+}
+#header .col-md-5 nav {
+  width: 100%;
+  height: 100%;
+}
+#header .col-md-5 nav ul {
+  list-style-type: none;
+  list-style: none;
+  overflow: hidden;
+  margin: 13px 0;
+  padding: 0;
+  cursor: pointer;
+}
+#header .col-md-5 nav ul a {
+  margin: 5px 0;
+  display: block;
+  color: #111;
+  font-size: 15px;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-align: center;
+  text-decoration: none;
+  -webkit-transition: all .3s ease;
+  /* Safari and Chrome */
+  -moz-transition: all .3s ease;
+  /* Firefox */
+  -ms-transition: all .3s ease;
+  /* IE 9 */
+  -o-transition: all .3s ease;
+  /* Opera */
+  transition: all .3s ease;
+}
+#header .col-md-5 nav ul a:hover {
+  text-decoration: none;
+  color: #a03033;
+}
+#header .col-md-5 nav.nav-left ul li {
+  float: right;
+  margin-left: 20px;
+}
+#header .col-md-5 nav.nav-right ul li {
+  float: left;
+  margin-right: 20px;
 }
 #header .samfundet-icon {
   display: block;
