--- a/public/less/main.less
+++ b/public/less/main.less
@@ -49,6 +49,80 @@ a {
 }
 #header {
   margin: 10px 0;
+  color: @theme-primary;
+  .col-md-5 {
+    overflow: hidden;
+		margin: 0;
+		padding: 0;
+		cursor: pointer;
+    nav {
+      width: 100%;
+      height: 100%;
+      ul {
+        list-style-type: none;
+    		list-style: none;
+    		overflow: hidden;
+    		margin: 13px 0;
+    		padding: 0;
+    		cursor: pointer;
+        a {
+          margin: 5px 0;
+          display: block;
+          color: @theme-primary;
+          font-size: 15px;
+          font-weight: bold;
+          text-transform: uppercase;
+          text-align: center;
+          text-decoration: none;
+          .transition-all();
+          &:hover {
+            text-decoration: none;
+            color: @theme-danger;
+          }
+        }
+      }
+      &.nav-left {
+        ul {
+          li {
+            float: right;
+            margin-left: 20px;
+          }
+        }
+      }
+      &.nav-right {
+        ul {
+          li {
+            float: left;
+            margin-right: 20px;
+          }
+        }
+      }
+    }
+  }
+  /*
+  a:not(.samfundet-icon) {
+    display: block;
+    color: @theme-primary;
+    font-size: 18px;
+    font-weight: 500;
+    text-transform: uppercase;
+    text-align: center;
+    padding: 20px 30px;
+    text-decoration: none;
+    .transition-all();
+    &:hover {
+      text-decoration: none;
+      color: @theme-danger;
+    }
+    &:focus {
+      text-decoration: none;
+      color: @theme-danger;
+    }
+    &:active {
+      text-decoration: none;
+      color: @theme-danger;
+    }
+  }*/
 }
 #header .samfundet-icon {
     display: block;
