--- a/public/css/main.css
+++ b/public/css/main.css
@@ -136,3 +136,104 @@ a:focus {
     background-position: center;
   }
 }
+
+.modal-item {
+  margin: 0 0 15px;
+  right: 0;
+}
+.modal-item .modal-link {
+  display: block;
+  position: relative;
+  max-width: 400px;
+  margin: 0 auto;
+  text-decoration: none;
+}
+.modal-item .modal-link .caption {
+  background: rgba(24, 188, 156, 0.9);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transition: all ease 0.5s;
+  -webkit-transition: all ease 0.5s;
+  -moz-transition: all ease 0.5s;
+}
+.modal-item .modal-link .caption:hover {
+  opacity: 1;
+}
+.modal-item .modal-link .caption .caption-content {
+  position: absolute;
+  width: 100%;
+  height: 20px;
+  font-size: 20px;
+  text-align: center;
+  top: 40%;
+  margin-top: -12px;
+  color: white;
+}
+.modal-item .modal-link .caption .caption-content i {
+  margin-top: -12px;
+}
+.modal-item .modal-link .caption .caption-content h3,
+.modal-item .modal-link .caption .caption-content h4 {
+  margin: 0;
+}
+.item-modal .modal-content {
+  border-radius: 0;
+  background-clip: border-box;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  border: none;
+  min-height: 100%;
+  padding: 100px 0;
+  text-align: center;
+}
+.item-modal .modal-content h2 {
+  margin: 0;
+  font-size: 3em;
+}
+.item-modal .modal-content img {
+  margin-bottom: 30px;
+}
+.item-modal .modal-content .item-details {
+  margin: 30px 0;
+}
+.item-modal .close-modal {
+  position: absolute;
+  width: 75px;
+  height: 75px;
+  background-color: transparent;
+  top: 25px;
+  right: 25px;
+  cursor: pointer;
+}
+.item-modal .close-modal:hover {
+  opacity: 0.3;
+}
+.item-modal .close-modal .lr {
+  height: 75px;
+  width: 1px;
+  margin-left: 35px;
+  background-color: #4183D7;
+  transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  /* IE 9 */
+  -webkit-transform: rotate(45deg);
+  /* Safari and Chrome */
+  z-index: 1051;
+}
+.item-modal .close-modal .lr .rl {
+  height: 75px;
+  width: 1px;
+  background-color: #4183D7;
+  transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  /* IE 9 */
+  -webkit-transform: rotate(90deg);
+  /* Safari and Chrome */
+  z-index: 1052;
+}
+.item-modal .modal-backdrop {
+  opacity: 0;
+  display: none;
+}
