Endret visning av dato med CSS og Bootstrap

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -135,4 +135,17 @@ a:focus {
     margin: 0 auto;
     background-position: center;
   }
-}
+
+  /*Bookingoversikt*/
+
+  .italic {
+    font-style: italic;
+  }
+ .dateDesign {
+   color: rgb(185, 35, 49);
+ }
+
+ h2 {
+   font-family: Avenir Book;
+   font-size:36px;
+ }
