--- a/public/css/main.css
+++ b/public/css/main.css
@@ -146,7 +146,7 @@ a:focus {
  }
 
  .fontFamily{
-   font-family: Avenir Book;
+   font-family: "Avenir Book", Arial, sans-serif;;
  }
 
  .pFontSize {
@@ -154,4 +154,13 @@ a:focus {
  }
  .fontSizeDate {
    font-size: : 36px;
+ }
+ .alignMiddle{
+   padding-top: 9px;
+ }
+ .textAlign {
+   text-align: center;
+ }
+ .border-Right{
+   border-right: 1px solid grey;
  }
