Endret så rapporter ikke skal ha fet skrift, fremdeles problem i safari

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -306,7 +306,7 @@ a:focus {
  }
 
  .fontFamily{
-   font-family: "Avenir Book", Arial, sans-serif;;
+   font-family: "Avenir Book", Arial, sans-serif !important;
  }
 
  .pFontSize {
